src/objects/CQ_Customer_Contact__c.object
<CustomObject>
    <fields>
        <fullName>CQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to populate Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_CQ_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contracted Quote</description>
        <label>CQ Name</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.CH_ContactType__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.CQ_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the primary Customer Contact</description>
        <inlineHelpText>Identifies the primary Customer Contact. Only 1 primary per Contracted Quote and selected by default for first contact</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_Quote_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;CQ_CQ_Name__r.Id, CQ_CQ_Name__r.Apttus_Proposal__Proposal_Name__c)</formula>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_isCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer contact created from Cloned Quote</description>
        <label>CQ_isCloned</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Contact</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Customer Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>